[package]
name = "tui-img"
version = "0.1.0"
edition = "2021"
description = "A powerful terminal-based image batch compression and conversion tool"
license = "MIT"
repository = "https://github.com/howdyitskyle/tui-img"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
anyhow = "1.0"
image = { version = "0.25", features = ["jpeg", "png", "webp", "gif", "tiff", "bmp", "tga"] }
kamadak-exif = "0.5"
oxipng = "4"
webp = "0.3"
walkdir = "2.4"
rayon = "1.10"
memmap2 = "0.9"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"

[features]
default = []
avif = []
